Fix modal text content overflow

--- a/client/payment-details/dispute-details/style.scss
+++ b/client/payment-details/dispute-details/style.scss
@@ -17,10 +17,6 @@
 		padding-top: $grid-unit-30;
 	}
 
-	.components-flex-item {
-		flex-shrink: 0;
-	}
-
 	&__icon {
 		flex-shrink: 0;
 		padding: 6px;
